修复IAP、PurchaseView和ChangeIconView页面中的显示逻辑（购买后页面刷新失败的问题）、在TARGETS中添加英文本地化

--- a/GoalTracker/Info.plist
+++ b/GoalTracker/Info.plist
@@ -4,6 +4,7 @@
 <dict>
 	<key>CFBundleLocalizations</key>
 	<array>
+		<string>en</string>
 		<string>zh</string>
 	</array>
 	<key>ITSAppUsesNonExemptEncryption</key>
